<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.prabhatkushwaha.ss.register">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif-monospace"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/darkorange"
                android:textSize="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="serif-monospace"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/darkorange"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/rusername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/darkorange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/darkorange"
                android:textSize="15sp" />
            <android.support.design.widget.TextInputLayout
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginLeft="4dp"
                android:layout_height="wrap_content"
                card_view:passwordToggleTint="@color/darkorange"
                android:layout_width="match_parent"
                >
            <EditText
                android:id="@+id/rpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:paddingRight="15dp"
                android:textColor="@color/darkorange"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/darkorange"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/darkorange"
                android:textSize="15sp" />

            <Button
                android:id="@+id/post_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/darkorange"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
